--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,18 @@
 <nav class="navbar navbar-light bg-light">
 
   <a class="navbar-brand mr-auto" href="#"><b>BlockPolls</b></a>
-  <button type="button" class="btn btn-secondary">Create Poll</button>
+  <button type="button" class="btn btn-secondary" (click)="showForm = !showForm">Create Poll</button>
 
 </nav>
 
 <section class="jumpotron bg-light text-center">
   <h1>Polling like never before!</h1>
   <p class="lead text-muted">
-    Powered By Blockchain
+    Powered By Ethereum Blockchain
   </p>
 </section>
+
+<app-poll-create *ngIf="showForm"></app-poll-create>
 
 <div class="d-flex">
   <div class="container poll-list">
