--- a/src/app/poll-create/poll-create.component.html
+++ b/src/app/poll-create/poll-create.component.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="d-flex justify-content-center">
-    <button type="button" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
   </div>
 
 </form>
