poll vote component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,6 @@
     </app-poll>
   </div>
   <div class="container poll-details">
-    <b>Details</b>
+    <app-poll-vote></app-poll-vote>
   </div>
 </div>
