showing active polls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,22 @@
   <div class="container poll-list">
     <app-poll *ngFor="let poll of polls"
       [question] = "poll.question"
-      [votes] = "poll.votes"
+      [votes] = "poll.results"
       [voted] = "poll.voted"
-      [pollImage] = "poll.image"
+      [pollImage] = "poll.thumbnail"
+      (click)="setActivePoll(poll)"
     >
     </app-poll>
   </div>
   <div class="container poll-details">
-    <app-poll-vote></app-poll-vote>
+    <app-poll-vote
+    *ngIf="activePoll"
+    [voted]="activePoll.voted"
+    [question]="activePoll.question"
+    [options]="activePoll.options"
+    [results]="activePoll.results"
+    >
+
+  </app-poll-vote>
   </div>
 </div>
