--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
 <div class="d-flex">
   <div class="container poll-list">
-    <app-poll *ngFor="let poll of polls"
+    <app-poll *ngFor="let poll of polls | async"
       [question] = "poll.question"
       [votes] = "poll.results"
       [voted] = "poll.voted"
