--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,10 @@
   </p>
 </section>
 
-<app-poll-create *ngIf="showForm"></app-poll-create>
+<app-poll-create
+  *ngIf="showForm"
+  (pollCreated)="handlePollCreate($event)"
+></app-poll-create>
 
 <div class="d-flex">
   <div class="container poll-list">
@@ -28,10 +31,14 @@
   <div class="container poll-details">
     <app-poll-vote
     *ngIf="activePoll"
+    [id] = "activePoll.id"
     [voted]="activePoll.voted"
     [question]="activePoll.question"
     [options]="activePoll.options"
     [results]="activePoll.results"
+
+    (pollVoted) = "handlePollVote($event)"
+
     >
 
   </app-poll-vote>
